commit with tests fix and formatting